--- a/MultiPlatformTest/Resources/index.html
+++ b/MultiPlatformTest/Resources/index.html
@@ -1,10 +1,41 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+  <meta charset="utf-8" />
+  <title>MultiPlatformTest</title>
 </head>
 <body>
-    Hellow, World!!
+  <p>MultiPlatformTest</p>
+  <input type="text" id="message" /><button id="save">save</button>
+  <script>
+    const $message = document.getElementById('message');
+    const $save = document.getElementById('save');
+
+    function setMessage(data) {
+      $message.value = data;
+    }
+
+    $save.addEventListener('click', function () {
+      invokeAction('save', $message.value);
+    });
+    window.addEventListener('injectedInvokeAction', function () {
+      invokeAction('loaded', '');
+    });
+
+    (function checkInjectedInvokeAction() {
+      if (!window.invokeAction) {
+        return setTimeout(checkInjectedInvokeAction, 100);
+      }
+      var event;
+      const name = 'injectedInvokeAction';
+      if (typeof (Event) === 'function') {
+        event = new Event(name);
+      } else {
+        event = document.createEvent('Event');
+        event.initEvent(name, true, true);
+      }
+      window.dispatchEvent(event);
+    })();
+  </script>
 </body>
 </html>
